# pysandbox-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEMO_SUMMARY.md  DYNAMIC_MODULES.md  EMBEDDING_GUIDE.md  MICROSANDBOX_GUIDE.md  QUICKSTART.md  README.md  TAURI_INTEGRATION.md  build.rs
.beads/: issues.jsonl
.github/workflows/: publish_python_tools.yml
docs/: PYTHON_BUNDLE_BUILD_SPEC.md  PYTHON_TOOLS_DEMOS.md  PYTHON_TOOLS_EXTENSION_PACKAGING.md  PYTHON_TOOLS_EXTENSION_RUNBOOK.md
entitlements/: RznPythonInherit.entitlements  RznPythonWorker.entitlements
examples/: interactive_setup.rs  matplot.rs  simple_demo.rs  tauri_backend.rs.template  toy.rs  working_demo.rs
examples/python_sandbox/: README.md
examples/python_sandbox/quick_starts/: create_demo_env.json  health_probe.json  list_envs.json  run_hello_world.json  run_in_demo_env.json
resources/systems/python_sandbox/: system.metadata.ds.yaml  system.metadata.system.yaml  system.metadata.yaml
scripts/: build-python-bundle.sh  build_macos_universal_worker.sh  build_python_tools_bundle_macos_universal.sh  build_python_tools_variants_macos_universal.sh  mcp_demo_charts.py  mcp_smoke.py  publish_python_tools_release.py  publish_python_tools_variants.py  publish_python_tools_variants_local_and_prod.sh
scripts/plugins/: README.md  build_bundle.py
scripts/plugins/config/: python-tools-ds.json  python-tools-system.json  python-tools.json
src/: analyzer.rs  config.rs  engine.rs  errors.rs  executor.rs  lib.rs  microsandbox_auth.rs  microsandbox_engine.rs  microsandbox_setup.rs  native.rs  policy.rs  sandbox_builder.rs  sandboxed.rs
