[package]
name = "pysandbox-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.23.5", features = [ "auto-initialize"] }
anyhow = "1.0.97"
thiserror = "2.0.12"
textwrap = "0.16.0"

[lib]
name = "sandboxed_python"
crate-type = ["rlib"]

[build-dependencies]
pyo3-build-config = "0.23.5"